--- a/package.json
+++ b/package.json
@@ -7,14 +7,25 @@
     "@fortawesome/free-brands-svg-icons": "^5.12.1",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.9",
+    "@material-ui/core": "^4.9.5",
+    "@material-ui/icons": "^4.9.1",
+    "@react-google-maps/api": "^1.8.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.4.1",
+    "google-map-react": "^1.1.6",
+    "lodash-es": "^4.17.15",
+    "material-ui-icons": "^1.0.0-beta.36",
     "react": "^16.13.0",
+    "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.0",
     "react-mdl": "^2.1.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "react-slick": "^0.25.2",
+    "react-spring": "^8.0.27",
+    "react-use-gesture": "^7.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
