--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-scripts": "3.4.0",
     "react-slick": "^0.25.2",
     "react-spring": "^8.0.27",
-    "react-use-gesture": "^7.0.5"
+    "react-use-gesture": "^7.0.5",
+    "simple-react-lightbox": "^2.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
