--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-slick": "^0.25.2",
     "react-spring": "^8.0.27",
     "react-use-gesture": "^7.0.5",
+    "recharts": "^2.0.0-beta.2",
     "simple-react-lightbox": "^2.5.3"
   },
   "scripts": {
